Richtige package-Namen für SUT

--- a/sut/src/main/resources/application.yml
+++ b/sut/src/main/resources/application.yml
@@ -13,4 +13,4 @@ quote:
 spring:
     profiles: test
 quote:
-    url: https://gturnquist-quoters.cfapps.io/api/random
+    url: https://localhost:8090/
